Training docs/Assignment8/Trial/src/objects/Project_Details__c.object
<CustomObject>
	<description>Displays The Project Details Custom Object.</description>
	<fields>
		<fullName>Client__c</fullName>
		<description>It Describes the relationship between the Client and The
			Project.</description>
		<inlineHelpText>Please Choose your Client.</inlineHelpText>
		<label>Client</label>
		<referenceTo>Client__c</referenceTo>
		<relationshipLabel>Project Detail</relationshipLabel>
		<relationshipName>Project_Detail</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<reparentableMasterDetail>true</reparentableMasterDetail>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>End_Date__c</fullName>
		<description>These Shows The End Date of the Project.</description>
		<inlineHelpText>Please Enter the End Date of the Project.</inlineHelpText>
		<label>End Date</label>
		<required>true</required>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Implementation_Type__c</fullName>
		<description>This shows The Implementation type</description>
		<inlineHelpText>Please Choose the Implementation Type.</inlineHelpText>
		<label>Implementation Type</label>
		<picklist>
			<picklistValues>
				<fullName>Product Development</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Support</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Enhancements</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Enterprise Services</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Manager__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Manager</label>
		<lookupFilter>
			<active>true</active>
			<filterItems>
				<field>Employee__c.Role__r.Role__c</field>
				<operation>equals</operation>
				<value>Project Manager</value>
			</filterItems>
			<isOptional>false</isOptional>
		</lookupFilter>
		<referenceTo>Employee__c</referenceTo>
		<relationshipLabel>Project Detail</relationshipLabel>
		<relationshipName>Project_Detail</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Project_Description__c</fullName>
		<description>Displays the Projects Description.</description>
		<inlineHelpText>Please enter the Projects Description.</inlineHelpText>
		<label>Project Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Start_Date__c</fullName>
		<description>This displays the Start Date for the task.</description>
		<inlineHelpText>Please Enter the Start Date.</inlineHelpText>
		<label>Start Date</label>
		<required>true</required>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Status__c</fullName>
		<description>Displays the Status</description>
		<inlineHelpText>Please Enter the Status.</inlineHelpText>
		<label>Status</label>
		<picklist>
			<picklistValues>
				<fullName>Open</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Closed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In Progress</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<label>Project Detail</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>PRJ-{0000}</displayFormat>
		<label>Project Code</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Project Detail</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>